--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = '/dev-api'
-VUE_APP_ROCK_API ='/dev-api'
+VUE_APP_ROCK_API ='http://localhost:8888'
 
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
